[gd_scene load_steps=7 format=3 uid="uid://dotgxtot02sw5"]

[ext_resource type="Script" path="res://scripts/ui/upgrade_menu.gd" id="1_ytgv6"]
[ext_resource type="Material" uid="uid://csxlxcwxw3h3v" path="res://assets/shaders/rainbow.tres" id="2_xatk1"]
[ext_resource type="StyleBox" uid="uid://dwibpkoqk5pkl" path="res://assets/themes/upgrade_button/upgrade_button_hover.tres" id="3_hc2cn"]
[ext_resource type="StyleBox" uid="uid://bspcvalmxg40p" path="res://assets/themes/upgrade_button/upgrade_button.tres" id="4_gf355"]
[ext_resource type="Texture2D" uid="uid://d2g70s3s7rt7t" path="res://assets/upgrades/upgrade_icon_placeholder.png" id="5_3bohp"]
[ext_resource type="Texture2D" uid="uid://nypwia7qdds7" path="res://assets/upgrades/icons/vedal_outline.png" id="6_wuu6a"]

[node name="UpgradeMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ytgv6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.5
offset_top = -109.5
offset_right = 172.5
offset_bottom = 109.5
grow_horizontal = 2
grow_vertical = 2

[node name="NtxLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
material = ExtResource("2_xatk1")
layout_mode = 2
text = "NTX 4090!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(345, 219)
layout_mode = 2

[node name="ChoicePanelContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 1

[node name="RerollContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="RerollButton" type="Button" parent="VBoxContainer/RerollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Reroll"

[node name="RerollLabel" type="Label" parent="VBoxContainer/RerollContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Penalty: 0 exp"

[node name="UpgradeChoicePanel" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(345, 72)
layout_mode = 3
anchors_preset = 0
offset_left = -173.0
offset_top = -112.0
offset_right = 172.0
offset_bottom = -40.0

[node name="Button" type="Button" parent="UpgradeChoicePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/hover = ExtResource("3_hc2cn")
theme_override_styles/pressed = ExtResource("3_hc2cn")
theme_override_styles/normal = ExtResource("4_gf355")

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeChoicePanel"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="UpgradeName" type="Label" parent="UpgradeChoicePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = " Gaslight Lv 1"

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeChoicePanel/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="UpgradeChoicePanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="UpgradeChoicePanel/VBoxContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("5_3bohp")
stretch_mode = 3

[node name="Outline" type="TextureRect" parent="UpgradeChoicePanel/VBoxContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("6_wuu6a")

[node name="Description" type="Label" parent="UpgradeChoicePanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(290, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Vedal ignores all damage. However, every time he gets damaged, there is a 0.1% chance that all of the damage he ignored will be inflicted at once."
autowrap_mode = 2

[node name="Padding" type="Control" parent="UpgradeChoicePanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Padding" type="Control" parent="UpgradeChoicePanel/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/RerollContainer/RerollButton" to="." method="_on_reroll_button_pressed"]
